ultimate-devops-project-demo/kubernetes/apigateway/GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gatewayclass-apigateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
