ultimate-devops-project-demo/kubernetes/apigateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-apigateway
  namespace: opentelimetry
spec:
  parentRefs:
    - name: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: opentelemetry-demo-frontendproxy 
          port: 8080
